# CAE2_cxx-interface

./: .gitignore  CMakeLists.txt  README.md  config.yaml  config_withoutFileSystem.yaml
cxx_driver/include/: DCI.h  DCI1.h  OOPI.h  asmapi2.h  crypto_engine.h  de_pub.h  dmasmapi.lib  dmcpt_dll.h  dmcpt_dll.lib  dmdci.lib  dmde.lib  dmdpc.lib  dmdpi.lib  dmfldr_comm.lib  dmfldr_dll.lib  dmfldr_dll_java.lib  dmimon.lib  dmimon_dll.lib  dmimon_dll_java.lib  dmjmon_dll.lib  dmlogmnr.lib  dmlogmnr_client.lib  dmmsgparse.lib  dmnci.lib  dmsbt_dll.h  dodbc.lib  dpc_dll.h  dpc_dll_with_oci_connect.h  dpc_ora_dll.h  dwmon.lib  dwmon_dll.h  fldr.h  geos.lib  geos_c.lib  logmnr_client.h  logmnr_pub.h  msg_parse.h  msgparse_pub.h  nci.h  oopi.lib  (+4 more)
doc/: UserManual_withFileSystem.md  UserManual_withoutFileSystem.md
include/: CAE.h  DBVariant.h  DamengDB.h  Logger.h
pkg/dm_driver/include/: DPI.h
pkg/minio/include/: ini.h
pkg/minio/include/curl/: curl.h
pkg/minio/include/curlpp/: Form.hpp  Option.hpp
pkg/minio/include/miniocpp/: client.h
pkg/minio/include/nlohmann/: json_fwd.hpp
pkg/minio/lib/pkgconfig/: libcrypto.pc  libcurl.pc  miniocpp.pc
pkg/openssl/include/openssl/: configuration.h
pkg/parse_sql/src/: main.cc
pkg/sqltoaster/include/: get_tbname.h
src/: CAE.cpp  CAEwithFileSystem.cpp  DBVariant.cpp  DamengDB.cpp  Logger.cpp  main.cpp
